--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Primary Meta Tags -->
+<title>September 2nd 2025 at 8:45 AM</title>
+<meta name="title" content="September 2nd 2025 at 8:45 AM" />
+<meta name="description" content="Local Radio and TV Stations Serving Whitewater Wisconsin. Stay informed and entertained with our diverse range of programming, from local news and sports to music and community events. Tune in to discover the best of Wisconsin's local radio and TV!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="twitter:url" content="https://ikh.media/" />
+<meta property="og:title" content="September 2nd 2025 at 8:45 AM" />
+<meta property="og:description" content="Local Radio and TV Stations Serving Whitewater Wisconsin. Stay informed and entertained with our diverse range of programming, from local news and sports to music and community events. Tune in to discover the best of Wisconsin's local radio and TV!" />
+<meta property="og:image" content="https://cdn.ikhmedia.com/images/CS.webp" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://ikh.media/" />
+<meta property="twitter:title" content="September 2nd 2025 at 8:45 AM" />
+<meta property="twitter:description" content="Local Radio and TV Stations Serving Whitewater Wisconsin. Stay informed and entertained with our diverse range of programming, from local news and sports to music and community events. Tune in to discover the best of Wisconsin's local radio and TV!" />
+<meta property="twitter:image" content="https://cdn.ikhmedia.com/images/CS.webp" />
+
 <style>
 body, html {
   height: 100%;
