--- a/index.html
+++ b/index.html
@@ -115,13 +115,27 @@ IKH.Media plans to keep 91.7 FM the exact same way as it has been. However the s
  <center><br>
   <h1>Listen Live</h1>
   <h1>91.7 The Edge</h1><audio controls>
-  <source src="https://ianhoman.com/TheEdge" type="audio/mpeg"></audio>
+  <source src="https://listen.ikh.media/TheEdge" type="audio/mpeg"></audio>
   <br><center><h1>DeepTrax 91.7<br>(HD Radio | 91.7-2) </h1><audio controls>
-  <source src="https://ianhoman.com/DeepTrax" type="audio/mpeg"></audio></center>
+  <source src="https://listen.ikh.media/DeepTrax" type="audio/mpeg"></audio></center>
   <br><center><h1>TimeWarp 91.7<br>(HD Radio | 91.7-3) </h1><audio controls>
-  <source src="https://ianhoman.com/TimeWarp" type="audio/mpeg"></audio></center>
+  <source src="https://listen.ikh.media/TimeWarp" type="audio/mpeg"></audio></center>
   <br><center><h1>Evolve Nation<br>(HD Radio | 91.7-4) </h1><audio controls>
-  <source src="https://ianhoman.com/EvolveNation" type="audio/mpeg"></audio></center>
+  <source src="https://listen.ikh.media/EvolveNation" type="audio/mpeg"></audio></center>
+
+</center>
+ <center><br>
+  <h1>Live Sports Coverage</h1>
+  <h3>We Can No Longer Carry The Brewers, Bucks or Packers directly on 91.7 WSUW (Due To Licensing)<br> Instead You Can Listen Online Using The Players Below - Just Click Play</h3>
+
+  <h1>Packers Radio Network</h1><audio controls>
+  <source src="https://sports.ikh.media/Packers" type="audio/mpeg"></audio>
+  <br><center><h1>Brewers Radio Network </h1><audio controls>
+  <source src="https://sports.ikh.media/Brewers" type="audio/mpeg"></audio></center>
+  <br><center><h1>BMO Bucks Radio Network </h1><audio controls>
+  <source src="https://sports.ikh.media/Bucks" type="audio/mpeg"></audio></center>
+  <br><center><h1>Warhawk Athletics</h1><audio controls>
+  <source src="https://sports.ikh.media/Warhawks" type="audio/mpeg"></audio></center>
 
 </center>
   </li>
