--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@ IKH.Media plans to keep 91.7 FM the exact same way as it has been. However the s
   <h1>Listen Live</h1>
   <h1>91.7 The Edge</h1><audio controls>
   <source src="https://listen.ikh.media/TheEdge" type="audio/mpeg"></audio>
-  <br><center><h1>DeepTrax 91.7<br>(HD Radio | 91.7-2) </h1><audio controls>
+  <br><center><h1>DeepTrax 91.7<br>(HD Radio | 91.7-2 | 104.1 FM) </h1><audio controls>
   <source src="https://listen.ikh.media/DeepTrax" type="audio/mpeg"></audio></center>
-  <br><center><h1>TimeWarp 91.7<br>(HD Radio | 91.7-3) </h1><audio controls>
+  <br><center><h1>TimeWarp 91.7<br>(HD Radio | 91.7-3 | 103.7 FM) </h1><audio controls>
   <source src="https://listen.ikh.media/TimeWarp" type="audio/mpeg"></audio></center>
-  <br><center><h1>Evolve Nation<br>(HD Radio | 91.7-4) </h1><audio controls>
+  <br><center><h1>Evolve Nation<br>(HD Radio | 91.7-4) | 100.7 FM</h1><audio controls>
   <source src="https://listen.ikh.media/EvolveNation" type="audio/mpeg"></audio></center>
 
 </center>
