--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ IKH.Media plans to keep 91.7 FM the exact same way as it has been. However the s
   <source src="https://listen.ikh.media/DeepTrax" type="audio/mpeg"></audio></center>
   <br><center><h1>TimeWarp 91.7<br>(HD Radio | 91.7-3 | 103.7 FM) </h1><audio controls>
   <source src="https://listen.ikh.media/TimeWarp" type="audio/mpeg"></audio></center>
-  <br><center><h1>Evolve Nation<br>(HD Radio | 91.7-4) | 100.7 FM</h1><audio controls>
+  <br><center><h1>Evolve Nation<br>(HD Radio | 91.7-4 | 100.7 FM)</h1><audio controls>
   <source src="https://listen.ikh.media/EvolveNation" type="audio/mpeg"></audio></center>
 
 </center>
