--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ IKH.Media plans to keep 91.7 FM the exact same way as it has been. However the s
 
   <h1>Packers Radio Network</h1><audio controls>
   <source src="https://sports.ikh.media/Packers" type="audio/mpeg"></audio>
-  <br><center><h1>Brewers Radio Network </h1><audio controls>
+  <br><!--<center><h1>Brewers Radio Network </h1><audio controls>
   <source src="https://sports.ikh.media/Brewers" type="audio/mpeg"></audio></center>
   <br><center><h1>BMO Bucks Radio Network </h1><audio controls>
   <source src="https://sports.ikh.media/Bucks" type="audio/mpeg"></audio></center>
   <br><center><h1>Warhawk Athletics</h1><audio controls>
-  <source src="https://sports.ikh.media/Warhawks" type="audio/mpeg"></audio></center>
+  <source src="https://sports.ikh.media/Warhawks" type="audio/mpeg"></audio></center>-->
 
 </center>
   </li>
