--- a/watch-live/index.html
+++ b/watch-live/index.html
@@ -82,7 +82,7 @@ body {font-family: "Lato", sans-serif}
 <script src="https://cdn.jsdelivr.net/npm/video.js@latest/dist/video.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/video.js@latest/dist/alt/video-js-cdn.min.css">
 <style>body { background-color: rgba(0, 0, 0, 0); margin: 0px auto; overflow: hidden; }</style>
-<video-js id="HD1" controls width="640px" height="360px" class="video-js vjs-default-skin" autoplay>
+<video-js id="HD1" poster="https://static.wixstatic.com/media/3c1620_b4c50a7e36004cfbbdb96bfadf64d2f0~mv2.png/v1/fill/w_1500,h_700,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/Aspire%20Care%20Transparent%20Logo.png" controls width="640px" height="360px" class="video-js vjs-default-skin" autoplay>
   <source src="https://watch.ikhmedia.com/HD1/play.m3u8" type="application/x-mpegURL">
 </video-js>
 <br>
